--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,11 @@ out/
 .env.test.local
 .env.production.local
 
-# Prisma
-api/prisma/*.db
-api/prisma/*.db-journal
+# Prisma y Bases de Datos
+api/*.db
+api/*.db-journal
+*.db
+*.db-journal
 
 # ================================
 # IDEs y Editores
