--- a/api/package.json
+++ b/api/package.json
@@ -23,9 +23,14 @@
   "description": "Optimizador de cobertura de personal para guardias hospitalarias usando algoritmos de flujo.",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "prisma": "^5.22.0"
+    "jsonwebtoken": "^9.0.3",
+    "prisma": "^5.22.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "dotenv-cli": "^11.0.0",
