--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,16 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      # Persistencia de la base de datos SQLite en el host
-      - ./api/prisma:/app/api/prisma
+      # Persistencia de la base de datos SQLite en volumen nombrado (Mejor práctica)
+      - sqlite_data:/app/data/db
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=file:/app/api/prisma/prod.db
+      - DATABASE_URL=file:/app/data/db/prod.db
       - JWT_SECRET=supersecretkey_change_me_in_prod
+      # Credenciales opcionales para el seed inicial del admin
+      # - ADMIN_EMAIL=admin@hospital.com
+      # - ADMIN_PASSWORD=admin123
     restart: unless-stopped
+
+volumes:
+  sqlite_data:
