--- a/api/package.json
+++ b/api/package.json
@@ -33,8 +33,13 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "dotenv-cli": "^11.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.3.0",
     "jest": "^30.2.0",
+    "prettier": "^3.8.1",
     "supertest": "^7.2.2"
   }
 }
