--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
     "db:studio": "prisma studio",
     "test": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed && dotenv -e .env.test -- jest --runInBand",
     "db:scenario:feasible": "prisma migrate reset --force --skip-seed && node prisma/scenarios/feasible.js",
-    "db:scenario:infeasible": "prisma migrate reset --force --skip-seed && node prisma/scenarios/infeasible.js"
+    "db:scenario:infeasible": "prisma migrate reset --force --skip-seed && node prisma/scenarios/infeasible.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "prisma": {
     "seed": "node prisma/seed.js"
