--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,9 @@
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "ics": "^3.8.1",
     "jsonwebtoken": "^9.0.3",
     "prisma": "^5.22.0",
     "swagger-jsdoc": "^6.2.8",
