Finalize API hardening

--- a/api/package.json
+++ b/api/package.json
@@ -27,9 +27,10 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
-    "cors": "^2.8.5",
+    "cors": "^2.8.6",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "ics": "^3.8.1",
     "jsonwebtoken": "^9.0.3",
     "prisma": "^5.22.0",
