--- a/api/package.json
+++ b/api/package.json
@@ -36,7 +36,8 @@
     "prisma": "^5.22.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "@maxflow/shared": "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
