--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,8 @@
     "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.3.6",
-    "zustand": "^5.0.11"
+    "zustand": "^5.0.11",
+    "@maxflow/shared": "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
