--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -20,6 +20,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "allowJs": true,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
