--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "maxflow-shift-optimizer",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "setup": "prisma generate && prisma migrate dev",
@@ -11,7 +12,8 @@
     "db:reset": "prisma migrate reset",
     "db:studio": "prisma studio",
     "db:studio:test": "dotenv -e .env.test -- prisma studio",
-    "test": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed && dotenv -e .env.test -- jest --runInBand",
+    "test": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed && dotenv -e .env.test -- vitest run --pool=forks --fileParallelism=false --max-concurrency=1",
+    "test:ci": "dotenv -e .env.test -- npx prisma migrate reset --force --skip-seed && dotenv -e .env.test -- vitest run --pool=forks --fileParallelism=false --max-concurrency=1 --reporter=dot",
     "db:scenario:feasible": "prisma migrate reset --force --skip-seed && node prisma/scenarios/feasible.js",
     "db:scenario:infeasible": "prisma migrate reset --force --skip-seed && node prisma/scenarios/infeasible.js",
     "lint": "eslint .",
@@ -45,8 +47,8 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "globals": "^17.3.0",
-    "jest": "^30.2.0",
     "prettier": "^3.8.1",
-    "supertest": "^7.2.2"
+    "supertest": "^7.2.2",
+    "vitest": "^4.0.18"
   }
 }
